--- a/nginx.conf
+++ b/nginx.conf
@@ -40,9 +40,9 @@ http {
     server {
         listen       80 default_server;
         listen       [::]:80 default_server;
-        server_name  3.139.61.0;
+        server_name  _your_ip_or_domen;
         root         /usr/share/nginx/html;
-	return 302 https://$3.139.61.0$request_uri;
+	return 302 https://$your_ip_or_domen$request_uri;
         # Load configuration files for the default server block.
         include /etc/nginx/default.d/*.conf;
 
