--- a/snippets/ssl-params.conf
+++ b/snippets/ssl-params.conf
@@ -8,7 +8,7 @@ ssl_session_cache shared:SSL:10m;
 ssl_session_tickets off;
 ssl_stapling on;
 ssl_stapling_verify on;
-resolver ec2-3-139-61-0.us-east-2.compute.amazonaws.com valid=300s;
+resolver 8.8.8.8 8.8.4.4 valid=300s;
 resolver_timeout 5s;
 add_header Strict-Transport-Security "max-age=63072000; includeSubdomains; preload";
 add_header X-Frame-Options DENY;
